# ds

./: .gitmodules  .vim  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake/Modules/: FindDSSDK.cmake
doc/: design.vpp
include/: buffers.h  depth_sense_grabber.h
include/depth_sense/: buffers.h  depth_sense_device_manager.h  depth_sense_grabber_impl.h
include/impl/: buffers.hpp
src/: depth_sense_grabber.cpp  depth_sense_viewer.cpp  grabber.cpp  multi_grabber.cpp
src/depth_sense/: buffers.cpp  depth_sense_device_manager.cpp  depth_sense_grabber_impl.cpp
test/: CMakeLists.txt  test_buffers.cpp
